--- a/_config.yml
+++ b/_config.yml
@@ -30,9 +30,12 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-theme: minima
+remote_theme: jekyll/minima
 plugins:
   - jekyll-feed
+  - jekyll-remote-theme
+minima:
+  skin: dark
 
 # Exclude from processing.
 # The following items will not be processed, by default.
