Import posts from www.jakobhandersen.dk (#2)
* Add UrinalBand/FounrainOrchestra

* Add Sound People

* Added A Mazing Monk

* Create 2016-05-26-smk-paint.md

* Added Impossible Junction

* Removed kramdown hard wrap setting

* Added Info Screens for Spot Festival

* Added Master's thesis post

* Added 'Two small games for Øhavsmuseet'

* Create 2016-06-29-elf-scare.md

* Added Aarhus Rocks post

* Added Moesgaard Museum post

* Added Vokabulantis post

* Added Multi-region Exporter post

* Added Felix published post

* Added post on Oodi

* Added post on Chadwick House

* Added post on binaural panner v4

* Add post on Exporter v2.0

* Tweaks

--- a/_config.yml
+++ b/_config.yml
@@ -21,11 +21,12 @@
 title: Jakob Hougaard Andersen
 email: jakobhandersen@hotmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Welcome to my website here on GitHub.
-  As you probably notice, the site is currently work in progress - I am intending to move everything from https://jakobhandersen.dk to here...
+  Welcome to my CV website / blog here on GitHub.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  jakobhandersen
+timezone: Europe/Helsinki
+
 
 # Build settings
 remote_theme: jekyll/minima
@@ -34,6 +35,17 @@ plugins:
   - jekyll-remote-theme
 minima:
   skin: dark
+  date_format: "%d/%m %Y"
+show_excerpts: true
+excerpt_separator: <!--more-->
+
+# Front Matter Defaults (see https://jekyllrb.com/docs/configuration/front-matter-defaults/)
+defaults:
+  - scope:
+      path: "" # an empty string here means all files in the project
+      type: "posts" # previously `post` in Jekyll 2.2.
+    values:
+      layout: "post"
 
 # Exclude from processing.
 # The following items will not be processed, by default.
