--- a/_config.yml
+++ b/_config.yml
@@ -36,6 +36,9 @@ plugins:
 minima:
   skin: dark
   date_format: "%B %Y"
+  social_links:
+    - { platform: github,  user_url: "https://github.com/jakobhandersen" }
+    - { platform: linkedin, user_url: "https://www.linkedin.com/in/jakobhandersen/" }
 show_excerpts: true
 excerpt_separator: <!--more-->
 
